syntax="proto3";
option optimize_for=SPEED;//加快解析
option java_package="hanshunping.netty.netty.protobufcodec2";  //指定生成包
option java_outer_classname="MyDataInfo"; //外部类名称
message MyMessage{
  //定义一个枚举
  enum DateTypep{
    StudentType=0;//proto3中要求枚举的编号从0开始
    WorkerType=1;
  }
  //用data_type 来标识是哪一个枚举类型
  DateTypep date_type=1;
  //表示每次枚举类型最多只能出现其中的一个  节省空间
  oneof  dataBody{
    Student student=2;
    Worker worker=3;
  }

}
message Student {
  int32 id=1;
  string name=2;
}
message Worker{
  string name=1;
  int32 age=2;
}
